# backend/modules/governance/src/main/kotlin/com/stratuscloud/governance/domain/StorageTagResourceType.kt
@@ -1,0 +1,6 @@
+package com.stratuscloud.governance.domain
+
+enum class StorageTagResourceType {
+    BUCKET,
+    OBJECT
+}
